# adventofcode-2022

./: README.md  adventofcode2022.cabal
src/: Aoc.hs
src/Aoc/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
test/Aoc/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs
