cabal-version:      3.0
name:               adventofcode2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             David Tchepak
maintainer:         dave@davesquared.net
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with:         GHC == 9.4.2

common common-options
    ghc-options:
        -Wall
        -threaded
        -rtsopts
        -with-rtsopts=-N
    default-language: Haskell2010

library
    import:           common-options
    exposed-modules:
        Aoc,
        Aoc.Day01
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src

test-suite adventofcode2022-test
    import:           common-options
    other-modules:
        Aoc.Day01Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.0.0,
        hspec ^>=2.10.6,
        QuickCheck ^>=2.14.2,
        adventofcode2022
    build-tool-depends:  hspec-discover:hspec-discover == 2.*
